--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3582,7 +3582,7 @@ hero-btn {
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
   /* line 43, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_h1-hero.scss */
   .slider-area .hero__caption {
-    padding-left: 100px;
+    /* padding-left: 100px; */
   }
 }
 
